# taishang

./: .coverage.li-xufeng-MCLG-XX.218682.XvBjYxex  .coverage.li-xufeng-MCLG-XX.218834.XUNuulNx  .coverage.li-xufeng-MCLG-XX.231520.XeYloKRx  .coverage.li-xufeng-MCLG-XX.376878.XQPGADsx  .coverage.li-xufeng-MCLG-XX.387697.XIKYGABx  .coverage.li-xufeng-MCLG-XX.398577.XgyTxhIx  .coverage.li-xufeng-MCLG-XX.431883.XFUGzSyx  .coverage.li-xufeng-MCLG-XX.442978.XATwKwgx  .coverage.li-xufeng-MCLG-XX.507969.XiXktTAx  .coverage.li-xufeng-MCLG-XX.507969.XviyKZxx  .dockerignore  .gitignore  Dockerfile  README.md  api列表.md  merge_screenshots.py  nohup.out  package-lock.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  restart_app.py  runer.sh  start.py  start.spec  todo.md  transaction_history.json  tree.md  venv_usage.md  使用说明.md  实例.json  实例.md
BTC_code/: data.json  gemini_answer.json  gemini_api_caller.py  get_positions.py  macro_factor_collector.py  main.py  technical_indicator_collector.py  tradingview_auto_screenshot.py
ETH_code/: data.json  gemini_api_caller.py  get_positions.py  macro_factor_collector.py  main.py  technical_indicator_collector.py  tradingview_auto_screenshot.py
code/: README.md  data.json  gemini_api_caller.py  gemini_trade_advisor.py  macro_factor_collector.py  main.py  quant_GUI.py  quant_actions.py  quant_logic.py  quant_main_window.py  quant_utils.py  qwen_api_caller.py  qwen_trade_advisor.py  system_prompt_config.py  system_prompt_config.txt  technical_indicator_collector.py  telegram_bot.py  tradingview_auto_screenshot.py  (+1 more)
~/: .bashrc  (+1 more)
(+7113 files in other folders)
